# mercator

./: .gitattributes  Cargo.toml  README.md
example/: swedish_regions.typ
mercator/: README.md  mercator.wasm  typst.toml
mercator/example/: example.typ
mercator/examples/basic/: example.typ
mercator/examples/france/: all_france.typ
src/: lib.rs
typst-package/: README.md  typst.toml
