[package]
name = "mercator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
geojson = "0.24.2"
geo = "0.30.0"
serde = "1.0.219"
serde_json = "1.0"
svg = "0.18"

[profile.release]
lto = "fat"             
strip = true        
opt-level = 3 
codegen-units = 1   
panic = 'abort'     
debug = false             
debug-assertions = false  
overflow-checks = false   

[target.wasm32-unknown-unknown]
rustflags = [
    "-C", "target-feature=+simd128",
    "-C", "target-feature=+bulk-memory",
    "-C", "target-feature=+sign-ext"
]
